# rust-video

./: .gitignore  Cargo.toml  README.md
bundler/: Cargo.toml
bundler/fixtures/: lib.ts  main.ts
bundler/src/: bundle.rs  lib.rs  modules.rs  transpiler.rs
bundler/src/bundle/: mod.rs  modules.rs
chat/: Cargo.toml  chat.rest  ed25519.priv  ed25519.pub
chat-core/: Cargo.toml
chat-core/src/: lib.rs
chat-core/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat-core/src/utils/: jwt.rs
chat-notify-server/: Cargo.toml  index.html
chat-notify-server/configuration/: local.yaml
chat-notify-server/src/: configuration.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
chat-server/: Cargo.toml  chat.rest
chat-server/configuration/: local.yaml
chat-server/fixtures/: test.sql
chat-server/src/: configuration.rs  error.rs  lib.rs  main.rs
chat-server/src/handlers/: auth.rs  chat.rs  messages.rs  workspace.rs
chat-server/src/middlewares/: chat.rs
chat-server/src/models/: chat.rs  messsage.rs  mod.rs  user.rs  workspace.rs
chat-test/: Cargo.toml
chat-test/chat-notify-server/configuration/: local.yaml
chat-test/tests/: chat.rs
chat/configuration/: local.yaml
chat/examples/: ab.rs  ed25519.rs
chat/fixtures/: test.sql
chat/sql/: init.sql
chat/src/: configuration.rs  error.rs  lib.rs  main.rs
chat/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs
chat/src/middlewares/: auth.rs  chat.rs  mod.rs  server_time.rs
chat/src/models/: chat.rs  file.rs  messsage.rs  mod.rs  user.rs  workspace.rs
chat/src/utils/: jwt.rs  mod.rs
concurrency/: Cargo.toml
concurrency/examples/: amap_metrics.rs  cmap_metrics.rs  dredis.rs  matrix.rs  thread1.rs
concurrency/src/: lib.rs  matrix.rs  vector.rs
concurrency/src/metrics/: amap.rs  cmap.rs
crm-metadata/: Cargo.toml  build.rs
crm-metadata/configuration/: local.yaml
crm-metadata/src/: configuration.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs
crm-send/configuration/: local.yaml
crm-send/src/: configuration.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm-server/: Cargo.toml  build.rs
crm-server/configuration/: local.yaml
crm-server/src/: client.rs  configuration.rs  lib.rs  server.rs
crm-server/src/abi/: mod.rs
crm-server/src/pb/: crm.rs
crm-user-stat/: Cargo.toml  build.rs
crm-user-stat/configuration/: local.yaml
crm-user-stat/examples/: gen.rs
crm-user-stat/fixtures/: data.sql
crm-user-stat/src/: configuration.rs  lib.rs  main.rs
crm-user-stat/src/abi/: mod.rs
crm-user-stat/src/pb/: user_stats.rs
crm-user-stat/tests/: service.rs
dino/: Cargo.toml
dino-macros/: Cargo.toml
dino-macros/src/: process_js.rs
dino-server/: Cargo.toml
dino-server/examples/: server.rs
dino-server/fixtures/: config.yaml  config1.yaml
dino-server/src/: config.rs  engine.rs  error.rs  lib.rs  router.rs
dino-server/src/middlewares/: mod.rs
dino/src/: engine.rs  lib.rs  main.rs  utils.rs
dino/src/cli/: build.rs  init.rs  mod.rs  run.rs
dino/templates/: config.yaml.j2  inner.ts.j2  main.ts.j2
ecos-system/: Cargo.toml
ecos-system/configuration/: local.yaml
ecos-system/examples/: axum_serde.rs  axum_tracing.rs  builder.rs  bytes.rs  chat.rs  enum.rs  err.rs  mininginx.rs  more.rs  serde.rs  shortener.rs  tokio1.rs  tokio2.rs
ecos-system/src/: configuration.rs  error.rs  lib.rs  main.rs
ecos-system/tmp/logs/: scosystem.log.2025-01-09
error-code/: Cargo.toml
error-code-derive/: Cargo.toml
error-code-derive/src/: error_info.rs  lib.rs
error-code/examples/: error.rs  web.rs
error-code/src/: lib.rs
grammar/: Cargo.toml
grammar/examples/: gen_json.rs  json.rs  json_pest.pest  json_pest.rs  nginx_log.rs  nginx_log2.rs  rhai.rs
macros/: Cargo.toml
macros/examples/: auto_debug.rs  auto_deref.rs  enum_macro.rs  enum_macro_darling.rs  my_ready.rs  my_try.rs  my_vec.rs
macros/src/: auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  lib.rs
migrations/: 20250121081938_initial.sql  20250206014754_workspace.sql  20250213012400_triggers.sql  20250220061510_fake.sql
napi-algo/: Cargo.toml
napi-algo/src/: algo.rs  lib.rs  matrix.rs
napi-example/: Cargo.toml  index.js
napi-example/src/: algo.rs  lib.rs  matrix.rs
notify-server/: Cargo.toml
notify-server/configuration/: local.yaml
notify-server/src/: configuration.rs  lib.rs  main.rs  sse.rs
protos/crm/: messages.proto  rpc.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto  rpc.proto
rcli/: Cargo.toml  a.csv  b64.txt  blake3.txt  chachakey.txt  chachanonce.txt  ed25519.pk  ed25519.sk  output.json  output.yaml  test.http
rcli/src/: lib.rs  main.rs  utils.rs
rcli/src/cli/: base64_opts.rs  cmd_opts.rs  csv_opts.rs  genpass_opts.rs  http_opts.rs  jwt_opts.rs  mod.rs  text_opts.rs
rcli/src/process/: base64_code.rs  csv_convert.rs  gen_pass.rs  http_server.rs  jwt_code.rs  mod.rs  text.rs
simple-redis/: Cargo.toml
simple-redis/benches/: resp.rs
simple-redis/src/: lib.rs  main.rs  network.rs
simple-redis/src/backend/: mod.rs
simple-redis/src/cmd/: command.rs  hmap.rs  map.rs  mod.rs
simple-redis/src/resp/: array.rs  boolean.rs  bulk_string.rs  double.rs  encode.rs  integer.rs  map.rs  mod.rs  null.rs  resp_frame.rs  set.rs  simple_error.rs  simple_string.rs  utils.rs
simple-redis/src/respv2/: mod.rs  parser.rs
taotie/: Cargo.toml
taotie/examples/: arrow-serde.rs  ndjson.rs  pq.rs  repl.rs
taotie/notebooks/: pyproject.toml  taotie.ipynb
taotie/src/: lib.rs  main.rs
taotie/src/backend/: data_fusion.rs
taotie/src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
user-stat/: Cargo.toml
user-stat/configuration/: local.yaml
user-stat/examples/: gen.rs
user-stat/src/: configuration.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
