[workspace]
members = [
    "chat-server",
    "chat-core",
    "concurrency",
    "ecos-system",
    "error-code",
    "error-code-derive",
    "macros",
    "chat-notify-server",
    "rcli",
    "simple-redis",
    "chat-test",
    "crm-server",
    "user-stat", "crm-metadata", "crm-send",
]
resolver = "2"

[workspace.dependencies]
error-code = { path = "./error-code" }
error-code-derive = { path = "./error-code-derive" }
chat-core = { path = "./chat-core" }
chat-server = { path = "./chat-server" }
chat-notify-server = { path = "./chat-notify-server" }
