[workspace]
members = [
    "chat-server",
    "chat-core",
    "concurrency",
    "ecos-system",
    "error-code",
    "error-code-derive",
    "macros",
    "chat-notify-server",
    "rcli",
    "simple-redis",
    "chat-test",
    "crm-server",
    "crm-user-stat", "crm-metadata", "crm-send", "taotie", "grammar",
]
resolver = "2"

[workspace.dependencies]
error-code = { path = "./error-code" }
error-code-derive = { path = "./error-code-derive" }
chat-core = { path = "./chat-core" }
chat-server = { path = "./chat-server" }
chat-notify-server = { path = "./chat-notify-server" }
crm-user-stat = { path = "./crm-user-stat" }
crm-metadata = { path = "./crm-metadata" }
crm-send = { path = "./crm-send" }
