[package]
name = "bundler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
colored = "3.0.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
path-absolutize = "3.1.1"
regex = "1.11.1"
serde_json = "1.0.140"
sha = "1.0.3"
swc_atoms = "5.0.0"
swc_bundler = { version = "15.0.0", features = ["concurrent"] }
swc_common = { version = "8.0.1", features = ["sourcemap", "tty-emitter"] }
swc_ecma_ast = "8.1.0"
swc_ecma_codegen = "10.0.0"
swc_ecma_loader = "8.0.0"
swc_ecma_parser = "11.0.0"
swc_ecma_transforms_base = "12.0.0"
swc_ecma_transforms_typescript = "13.0.0"
ureq = { version = "3.0.10", features = ["charset"] }
url = "2.5.4"
