[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = [
    "http2",
    "multipart",
    "query",
    "tracing",
] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chat-core = { workspace = true }
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.6"
hex = "0.4.3"
hyper = { version = "1.5.2", features = ["full"] }
http-body-util = { version = "0.1.2", optional = true }
jsonwebtoken = "9.3.0"
mime_guess = "2.0.5"
pem = "3.0.4"
# r2d2 = "0.8.10"
# redis = { version = "0.28.2", features = ["r2d2"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "tls-rustls",
] }
sqlx-db-tester = { version = "0.5.0", optional = true }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "fs",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
ring = "0.17.8"
