[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = [
    "http2",
    "multipart",
    "query",
    "tracing",
] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.6"
hex = "0.4.3"
hyper = { version = "1.5.2", features = ["full"] }
jsonwebtoken = "9.3.0"
mime_guess = "2.0.5"
pem = "3.0.4"
# r2d2 = "0.8.10"
# redis = { version = "0.28.2", features = ["r2d2"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "tls-rustls",
] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-full", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.0", features = ["v7", "serde"] }

[dev-dependencies]
http-body-util = "0.1.2"
ring = "0.17.8"
sqlx-db-tester = "0.5.0"
