[package]
name = "crm-send"
version = "0.1.0"
edition = "2024"

[features]
default = ["test_utils"]
test_utils = ["fake", "nanoid"]

[dependencies]
anyhow = "1.0.95"
config = "0.15.6"
crm-metadata = { workspace = true }
chrono = { version = "0.4.39", features = ["serde"] }
fake = { version = "4.0.0", features = ["derive", "chrono"], optional = true }
nanoid = { version = "0.4.0", optional = true }
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.12.3", features = ["zstd", "tls"] }
derive_builder = "0.20.2"
futures = "0.3.31"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-stream = "0.1.17"
uuid = { version = "1.15.0", features = ["v4"] }

[build-dependencies]
anyhow = "1.0.95"
proto-builder-trait = "0.6.2"
tonic-build = "0.12.3"

[dev-dependencies]
crm-send = { workspace = true, features = ["test_utils"] }
