[package]
name = "crm-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.95"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.12.3", features = ["zstd", "tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[build-dependencies]
anyhow = "1.0.95"
prost-build = "0.13.5"
tonic-build = "0.12.3"
