[package]
name = "dino-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arc-swap = "1.7.1"
axum = { version = "0.8.3", features = ["http2", "query", "tracing", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dashmap = "6.1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
matchit = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
