[package]
name = "dino"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
askama = "0.13.0"
blake3 = "1.8.1"
bundler = { workspace = true }
clap = { version = "4.5.35", features = ["derive"] }
dino-macros = { workspace = true }
dialoguer = { version = "0.11.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
enum_dispatch = "0.3.13"
git2 = { version = "0.20.1", default-features = false }
glob = "0.3.2"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
rquickjs = { version = "0.9.0", features = ["full"] }
rquickjs-macro = "0.9.0"
typed-builder = "0.21.0"
