[package]
name = "dino"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
askama = "0.13.0"
blake3 = "1.8.1"
bundler = { workspace = true }
clap = { version = "4.5.35", features = ["derive"] }
dino-server = { workspace = true }
dialoguer = { version = "0.11.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
enum_dispatch = "0.3.13"
git2 = { version = "0.20.1", default-features = false }
glob = "0.3.2"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.19"
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
tracing = "0.1.41"
tokio-stream = { version = "0.1.17", features = ["sync"] }
