[package]
name = "ecos-system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
chacha20poly1305 = "0.10.1"
serde_with = "3.12.0"
http = "1.2.0"

[dev-dependencies]
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
chrono = {version = "0.4.39", features = ["serde"]}
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = [
    "add",
    "from",
    "display",
    "into",
    "debug",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum = { version = "0.26.3", features = ["derive"] }
base64 = "0.22.1"
