[package]
name = "ecos-system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
chacha20poly1305 = "0.10.1"
serde_with = "3.12.0"
serde = { version = "1.0.217", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
config = "0.15.6"

[dev-dependencies]
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
chrono = {version = "0.4.39", features = ["serde"]}
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = [
    "add",
    "from",
    "display",
    "into",
    "debug",
] }
serde_json = "1.0.137"
strum = { version = "0.26.3", features = ["derive"] }
base64 = "0.22.1"
http = "1.2.0"
bytes = "1.9.0"
blake3 = "1.5.5"
dashmap = "6.1.0"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }
futures = "0.3.31"
console-subscriber = "0.4.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls"] }
nanoid = "0.4.0"
