[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.29"
syn = { version = "2.0.94", features = ["extra-traits"] }
quote = "1.0.9"

[dev-dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
