[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
syn = { version = "2.0.96", features = ["extra-traits"] }
quote = "1.0.38"
darling = "0.20.10"

[dev-dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
