[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
anyhow = "1.0.95"
serde_yaml = "0.9.34"
rand = "0.8.5"
zxcvbn = "3.1.0"
base64 = "0.22.1"
blake3 = "1.5.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
chacha20poly1305 = "0.10.1"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "net", "macros", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace", "fs"] }
jsonwebtoken = "9.3.0"
