[package]
name = "simple-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
enum_dispatch = "0.3.13"
thiserror = "2.0.11"
dashmap = "6.1.0"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = { version = "0.3.31", default-features = false}
