[package]
name = "taotie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arrow = { version = "54.2.1", features = ["prettyprint"] }
chrono = { version = "0.4.39", features = ["serde"] }
datafusion = { version = "45.0.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
parquet = "54.2.1"
polars = { version = "0.46.0", features = ["parquet", "timezones", "sql", "lazy"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
